fix: 将<a>标签替换为<Link>组件，处理部署路由实效问题

--- a/app/signal-feed/page.mdx
+++ b/app/signal-feed/page.mdx
@@ -3,6 +3,8 @@ title: Signal Feed - 金融数据接口库
 description: 开源的金融数据接口库，支持 A 股、美股、基金等市场的数据获取
 ---
 
+import Link from 'next/link'
+
 <br />
 
 > **Open source financial data interface library**  
@@ -29,9 +31,9 @@ Signal Feed 是一个面向个人用户的金融数据流与 API 服务，支持
 <div className="text-sm text-gray-600 dark:text-gray-400 mb-3">
 几分钟内完成部署，开始使用金融数据服务
 </div>
-<a href="/signal-feed/geeting-started" className="text-emerald-600 hover:text-emerald-700 text-sm font-medium">
+<Link href="/signal-feed/geeting-started" className="text-emerald-600 hover:text-emerald-700 text-sm font-medium">
 查看部署指南 →
-</a>
+</Link>
 </div>
 
 <div className="p-4 border border-gray-200 dark:border-gray-700 rounded-lg">
@@ -39,9 +41,9 @@ Signal Feed 是一个面向个人用户的金融数据流与 API 服务，支持
 <div className="text-sm text-gray-600 dark:text-gray-400 mb-3">
 详细的 API 接口文档和使用示例
 </div>
-<a href="/signal-feed/api-reference" className="text-emerald-600 hover:text-emerald-700 text-sm font-medium">
+<Link href="/signal-feed/api-reference" className="text-emerald-600 hover:text-emerald-700 text-sm font-medium">
 查看 API 文档 →
-</a>
+</Link>
 </div>
 
 </div>
